# dvo

./: .gitignore  README.md
dvo_benchmark/: CMakeLists.txt  manifest.xml
dvo_benchmark/launch/: benchmark.launch  benchmark.yaml
dvo_benchmark/src/: benchmark.cpp
dvo_core/: CMakeLists.txt  manifest.xml
dvo_core/include/dvo/: dense_tracking.h
dvo_core/include/dvo/core/: datatypes.h  least_squares.h  math_sse.h  rgbd_image.h
dvo_core/include/dvo/util/: histogram.h  revertable.h
dvo_core/include/dvo/visualization/: async_point_cloud_builder.h  camera_trajectory_visualizer.h  pcl_camera_trajectory_visualizer.h
dvo_core/src/: dense_tracking.cpp  dense_tracking_config.cpp
dvo_core/src/core/: least_squares.cpp  math_sse.cpp  rgbd_image.cpp  weight_calculation.cpp
dvo_core/src/util/: histogram.cpp
dvo_core/src/visualization/: async_point_cloud_builder.cpp  camera_trajectory_visualizer.cpp  pcl_camera_trajetory_visualizer.cpp  point_cloud_aggregator.cpp
dvo_ros/: .gitignore  CMakeLists.txt  manifest.xml
dvo_ros/cfg/: dvo.cfg
dvo_ros/include/dvo_ros/: camera_dense_tracking.h
dvo_ros/include/dvo_ros/util/: configtools.h
dvo_ros/include/dvo_ros/visualization/: ros_camera_trajectory_visualizer.h
dvo_ros/launch/: quickstart.launch  rviz.vcg
dvo_ros/src/: camera_dense_tracking.cpp
dvo_ros/src/visualization/: ros_camera_trajectory_visualizer.cpp
sophus/: Makefile  manifest.xml
